<resources>
    <string name="app_name">RC Car Controller</string>

    <string name="activity_device_list_control_begin_text">Click the button to seart searching for devices</string>
    <string name="activity_device_list_control_begin_button">Search</string>
    <string name="activity_device_list_control_cancel_text">Searching for devices…</string>
    <string name="activity_device_list_control_cancel_button">Stop</string>
    <string name="activity_device_list_control_retry_text">Search complete</string>
    <string name="activity_device_list_control_retry_button">Retry</string>
    <string name="activity_device_list_control_error_text">Cannot start the search. Ensure that bluetooth and location are enabled.</string>
    <string name="activity_device_list_control_no_permission_text">Cannot search for devices - permission is denied.</string>
    <string name="activity_device_list_control_no_permission_button">Request permissions</string>

    <string name="activity_controller_loading_dialog_title">Connecting…</string>
    <string name="activity_controller_loading_dialog_text">Connecting to device %s.</string>
    <string name="activity_controller_error_dialog_title">Error</string>
    <string name="activity_controller_error_dialog_text">An error occurred while connecting to device %s: %s</string>
    <string name="activity_controller_error_dialog_button_retry">Retry</string>
    <string name="activity_controller_error_dialog_button_close">Close</string>
    <string name="activity_controller_connected_toast">Connection established.</string>
    <string name="activity_controller_value_speed">Speed:</string>
    <string name="activity_controller_value_direction">Direction:</string>
    <string name="activity_controller_brake">Brake</string>
    <string name="activity_controller_horn">Horn</string>

    <string name="menu_settings_title">Settings</string>
    <string name="settings_minimum_speed">Minimum speed</string>
    <string name="settings_minimum_speed_description">Minimum PWM percentage to that will be sent to motors. Joystick values will be translated to PWM range above this point.</string>
    <string name="settings_maximum_turn_ratio">Maximum turn ratio</string>
    <string name="settings_maximum_turn_ratio_description">Maximum percentage of PWM speed that can be subtracted from given motor when turning. Affects turning speed.</string>
    <string name="settings_power_decrease">Power decrease</string>
    <string name="settings_power_decrease_description">Decreases power of a motor if it\'s running at a different speed.</string>
</resources>